fix background cropping

--- a/src/components/moods/moods.scss
+++ b/src/components/moods/moods.scss
@@ -4,6 +4,7 @@
 #parent {
   position: absolute;
   background-repeat: no-repeat;
+  background-position: center;
   background-size: cover;
   height: 100vh;
   width: 100vw;
